@@ -1,3 +1,10 @@
+2021-10-02 Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/GSToolTips.m: Use RELEASE and AUTORELEASE macros where
+	appropriate.  Minor fixes.
+	* Source/NSPopover.m: Add code to draw an outline outside of the
+	view.  Add GSPopoverPanel and GSPopoverView private classes.
+
 2021-09-30 Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSPopover.m: Fix an issue with NSPopover loading the
